// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`composition hook should return with SwitchField props 1`] = `
Object {
  "aria-describedby": "",
  "aria-invalid": false,
  "aria-required": undefined,
  "children": <React.Fragment>
    <ForwardRef
      className="css-hn9ny5 fp-SwitchHiddenInput"
      id=""
      type="checkbox"
      use="input"
    />
    <ForwardRef
      className="css-10w1388 fp-SwitchIcon"
    />
  </React.Fragment>,
  "className": "css-1u05auo css-1pwrqjj css-3ekj6a fp-Box fp-Switch",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-SwitchField"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

.emotion-15 {
  color: #574feb !important;
}

<div
  class="emotion-10 emotion-0 emotion-15 test fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`overrides SwitchField.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

.emotion-13 {
  background-color: red;
}

<div
  class="emotion-13 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for danger state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon {
  border-color: #da1717;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2:not(:checked) + .fp-SwitchIcon {
  box-shadow: #fbe7e7 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #fbe7e7 0px 0px 0px 2px !important;
  border-color: #f3b9b9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="true"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for success state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon {
  border-color: #0a7d33;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2:not(:checked) + .fp-SwitchIcon {
  box-shadow: #e6f2ea 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #e6f2ea 0px 0px 0px 2px !important;
  border-color: #b5d8c1;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for warning state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon {
  border-color: #ed9c22;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2:not(:checked) + .fp-SwitchIcon {
  box-shadow: #fdf5e8 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #fdf5e8 0px 0px 0px 2px !important;
  border-color: #f9e1bc;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

.emotion-15 {
  background-color: #574feb !important;
}

<div
  class="emotion-10 emotion-0 emotion-15 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with a switchLabel 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<div
  class="emotion-14 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-14 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 fp-SwitchLabel fp-Box fp-Label"
        for="switch"
        id="label"
      >
        Hello world
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly with checked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        checked=""
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with defaultChecked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        checked=""
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with disabled 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        disabled=""
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with isRequired 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-required="true"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with label 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-10 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-10:focus {
  outline: none;
}

.emotion-10 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-10[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-10[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-10:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-10:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-10:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-10:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-10:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-10[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SwitchField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <legend
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
        >
          Hello world
        </legend>
      </div>
    </div>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 emotion-17 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-1 emotion-2 emotion-10 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-1 emotion-2 emotion-13 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with name 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        name="SwitchFieldRocks"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with value 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

<div
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
        value="SwitchFieldValue"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;

exports[`theming SwitchField.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-SwitchIcon::before {
  background: white;
  content: '';
  border-radius: 100%;
  border: 1px solid #bdbdbd;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .fp-SwitchIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2[disabled] + .fp-SwitchIcon::before {
  background: #f2f2f2;
}

.emotion-2:not([disabled]):hover + .fp-SwitchIcon {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-2:focus + .fp-SwitchIcon {
  border-color: #574feb;
  box-shadow: #cccaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-SwitchIcon {
  border-color: #574feb;
  background-color: #574feb;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .fp-SwitchIcon {
  background-color: #aba7f5;
  border-color: #aba7f5;
}

.emotion-2:checked + .fp-SwitchIcon::before {
  border-color: #574feb;
  left: 1.25em;
}

.emotion-2[disabled]:checked + .fp-SwitchIcon::before {
  border-color: #aba7f5;
}

.emotion-13 {
  background-color: red;
}

<div
  class="emotion-13 emotion-0 emotion-1 fp-Box fp-SwitchField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 fp-Box fp-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 fp-SwitchHiddenInput fp-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 fp-SwitchIcon fp-Box"
      />
    </label>
  </div>
</div>
`;
